ocp/deployments/manifests/servicemesh/number_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name number-service
  labels: &labels
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservices-demo
    app.kubernetes.io/version: v1
spec:
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector: *labels
